welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: not found: value void
	void setDirection(Direction.EST);
        ^ZigZag:6: error: not found: value void
	void setDirection(Direction.OUEST);
        ^ZigZag:23: error: ambiguous reference to overloaded definition,
both method d in class ZigZag of type ()Unit
and  method d in class ZigZag of type ()Unit
match argument types ()
		if (d())
                    ^ZigZag:27: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:32: error: not found: value g
		if (g())
                    ^ZigZag:36: error: not found: value y
				setPos(x,y+2)
                                         ^ZigZag:5: error: method d is defined twice
  conflicting symbols both originated in file 'plm.runtime140.ZigZag'
def d(){
    ^